fixed sizing issue
fixed issue where big screenshot gets cut off on small monitors

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,13 @@ span.small {
   display: flex;
   margin-bottom: 5px;
 }
-  
+
+.viewport-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 body {
     background-color: rgb(114, 114, 114);
     position: center;
